packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/link_loop_indirect/link_loop_a.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{b08eab67-f542-4387-8834-5fd835cee9ae}" width="50.0" x="0.0" y="0.0">
  <label></label>
  <description></description>
  <author></author>
  <copyright></copyright>
  <version></version>
  <min_version></min_version>
  <aggregation type="json">null</aggregation>
  <libraries type="json">[]</libraries>
  <pythonpaths type="json">[]</pythonpaths>
  <overrides type="json">{}</overrides>
  <parameters type="json">{}</parameters>
  <ports/>
  <flow cls="Flow" height="50.0" id="" is_locked="False" source_uuid="{c3d68506-7c85-496b-a217-9d47cfb1b31a}" uuid="{da30f8da-9a29-4b86-a39f-f7308e953929}" width="50.0" x="1667.0" y="1970.0" href="link_loop_b.syx">
    <label>link_loop_b</label>
    <overrides type="json">{}</overrides>
    <ports/>
  </flow>
</flow>
